# wgpu-leptos

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml
.github/workflows/: github-pages.yml
src/: main.rs
src/engine/: core.rs  error.rs  external_signal.rs  items.rs  mod.rs  runner.rs  signal.rs  system_pipeline.rs  utils.rs
src/systems/: args.rs  error.rs  external_signal.rs  mod.rs  pipeline.rs  signal.rs
src/systems/handlers/: camera.rs  cursor_lock.rs  display.rs  mod.rs  pyramid.rs  time.rs
src/systems/shaders/: pyramid.wgsl
src/systems/utils/: color.rs  mod.rs  transform.rs
src/ui/: app.rs
src/ui/components/: engine.rs  engine_canvas.rs  footer.rs  mod.rs  pyramid_transform_configuration.rs  side_panel.rs
