[package]
name = "wgpu-leptos"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive", "min_const_generics"] }
cfg-if = "1.0.0"
chrono = "0.4.38"
env_logger = "0.11.5"
futures = "0.3.31"
glam = { version = "0.29.2", features = ["bytemuck"] }
log = "0.4.22"
ordered-float = "4.5.0"
thiserror = "2.0.3"
wgpu = "23.0.0"
winit = "0.30.5"
winit_input_helper = { git = "https://github.com/LioQing/winit_input_helper.git", branch = "update-0.30.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
leptos = { version = "0.6.15", features = ["csr"] }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Document", "Window", "Element"] }
wgpu = { version = "23.0.0", features = ["webgl"] }

[lints.rust]
dead_code = "allow"

[lints.clippy]
too_many_arguments = "allow"
